# lily

./: .appveyor.yml  .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  Findlily.cmake  LICENSE.txt  Makefile  Makefile.am  README-apache.md  README-builtin-library.md  README-getting-started.md  README.md  RELEASES.md  aft_main.c  any_type.html  apache_form_example.ly  appveyor.yml  autogen.sh  bad_type.ly  basic_types.ly  blastmaster.py  boolean_type.html  branch_test.ly  builtin_package.html  builtin_types.html  builtins.html  bytestring_type.html  classes.html  cliexec_main.c  compare_test.ly  configure.ac  control_flow.html  double_type.html  dyna_tools.py  enums.html  error_handling.html  exception_type.html  failtest_main.c  (+88 more)
apache/: CMakeLists.txt  Makefile.am  dyna_server.h  extras_server.h  mod_lily.c
em/: CMakeLists.txt  sandbox.c
embed_examples/: CMakeLists.txt  call_lily_from_c  call_lily_from_c.c
postgre/: CMakeLists.txt  lily_postgre.c
postgres/: CMakeLists.txt  dyna_postgres.h  lily_postgres.c
sandbox/: CMakeLists.txt  sandbox.c
src/: CMakeLists.txt  Makefile.am  aft_main.c  basic_class_example.ly  blastmaster.py  cliexec_main.c  csiphash.c  dyna_builtin.h  dyna_random.h  dyna_sys.h  dyna_time.h  exception_test.ly  extras_builtin.h  extras_random.h  extras_time.h  fs_main.c  lily.h  lily_alloc.c  lily_alloc.h  lily_api.c  lily_api_code_iter.h  lily_api_dyna.h  lily_api_dynaload.h  lily_api_embed.h  lily_api_hash.h  lily_api_msgbuf.h  lily_api_options.c  lily_api_options.h  lily_api_value.c  lily_api_value.h  lily_api_value_flags.h  lily_api_value_ops.h  lily_api_vm.h  lily_ast.c  lily_ast.h  lily_bind.c  lily_bind.h  lily_buffer_u16.c  lily_buffer_u16.h  lily_buffers.c  (+144 more)
src/apache/: Makefile.am  mod_lily.c
test/: CMakeLists.txt  covlib.c  extend.c  fail_classes.lily  fail_coroutines.lily  fail_enums.lily  fail_exceptions.lily  fail_forward.lily  fail_generics.lily  fail_import.lily  fail_keyargs.lily  fail_lambdas.lily  fail_optargs.lily  fail_syntax.lily  fail_template.lily  fail_type_check.lily  fail_variance.lily  feature_classes.lily  feature_closures.lily  feature_coroutines.lily  feature_dynaload.lily  feature_enums.lily  feature_exceptions.lily  feature_forward.lily  feature_generics.lily  feature_import.lily  feature_internal.lily  feature_keyargs.lily  feature_lambdas.lily  feature_optargs.lily  feature_template.lily  file_for_io.txt  import_parent.lily  lily_covlib.c  lily_covlib_bindings.h  lily_extend.c  lily_extend_bindings.h  run_tests.c  test.lily  test_driver.c  (+21 more)
test/benchmark/: README.md  bench.lily  binary_trees.lily  binary_trees.lly  fib.lily  for.lily  for.lly  map_numeric.lily  map_numeric.lly  map_string.lily  map_string.lly  test_benchmark.lily
test/call/: test_bad_call.lily  test_bad_keyargs.lily  test_bad_optargs.lily  test_call_pipe.lily  test_keyargs.lily  test_optargs.lily  test_varargs.lily
test/class/: test_bad_class.lily  test_class.lily
test/closure/: test_verify_closures.lily
test/constant/: test_verify_constant.lily
test/coroutine/: test_verify_coroutine.lily
test/coverage/: nul_in_file.lily  test_dynaload.lily  test_verify_coverage.lily
test/enum/: test_bad_enum.lily  test_enum.lily
test/exception/: test_bad_exception.lily  test_exception.lily
test/fail/: bad_anon_call.ly  bad_comma.ly  bad_right_brace.ly  bad_static_list_close_token.ly  continue_outside_loop.ly  excep_in_anonymous.ly  if_with_nil_return.ly  invalid_compare.ly  list_assign_wrong_class.ly  method_arg_redeclaration.ly  method_list_arg_redeclaration.ly  return_in_at_main.ly  right_brace_outside_block.ly  tok_pluspluseq.lily  unexpected_comment_eof.ly  wrong_assign.ly
test/format/: test_verify_format.lily
test/forward/: test_bad_forward.lily  test_forward.lily
test/gc/: test_verify_gc.lily
test/import/: enum_export_user.lily  rooted_base.lily  test_bad_import.lily  test_enum_export_main.lily  test_import.lily
test/import_dir/: basic_import_as.lily  comma_import.lily  diamond_a.lily  diamond_c.lily  enum_export_main.lily  enum_export_user.lily  enum_exporter.lily  fakefib.lily  multi_import_as.lily  ref_diamond.lily  ref_import.lily  ref_left.lily  ref_right.lily  ref_spectrum.lily  rooted_base.lily  test_deep_access.lily  test_deep_middle.lily  unresolved_forward.lily  var_access.lily
test/lambda/: test_bad_lambda.lily  test_lambda.lily
test/libraries/: CMakeLists.txt  lily_packagelib.c  lily_packagelib_bindings.h  packagelib.c
test/manifest/: test_bad_manifest.lily  test_manifest.lily
test/matchwith/: test_bad_matchwith.lily  test_matchwith.lily
test/method/: test_boolean.lily  test_byte.lily  test_bytestring.lily  test_file.lily  test_hash.lily  test_integer.lily  test_list.lily  test_option.lily  test_result.lily  test_string.lily
test/pass/: check_basics.lily  check_basics.lly  check_boolean_methods.lily  check_boolean_methods.lly  check_byte_methods.lily  check_byte_methods.lly  check_bytestring_methods.lily  check_bytestring_methods.lly  check_concat.lily  check_deep_import.lly  check_double_methods.lily  check_double_methods.lly  check_either_methods.lly  check_function_methods.lily  check_hash_methods.lily  check_hash_methods.lly  check_integer_methods.lily  check_integer_methods.lly  check_interpolation.lily  check_interpolation.lly  check_list_methods.lily  check_list_methods.lly  check_option_methods.lily  check_option_methods.lly  check_result_methods.lily  check_result_methods.lly  check_string_methods.lily  check_string_methods.lly  check_tuple_methods.lily  check_tuple_methods.lly  class_call_not_method.lly  global_object_set.ly  no_newline_at_end.ly  sanity.ly  valid_then_nil_ret.ly
test/prelude/: test_pkg_coroutine.lily  test_pkg_fs.lily  test_pkg_introspect.lily  test_pkg_math.lily  test_pkg_random.lily  test_pkg_subprocess.lily  test_pkg_sys.lily  test_pkg_time.lily  test_pkg_utf8.lily
test/rewind/: test_verify_rewind.lily
test/sandbox/: test_verify_sandbox.lily
test/syntax/: test_bad_syntax.lily  test_bad_token.lily  test_basics.lily
test/t/: lily_backbone.c  (+4 more)
(+1209 files in other folders)
